--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -2,8 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>#OC0.9.6 - Sonoma 14.0 MacBookPro16,3</key>
-	<string>kalkmann 081123</string>
+	<key>#OC0.9.6 - Sonoma 14.1.1 MacBookPro16,3</key>
+	<string>kalkmann 111123</string>
 	<key>ACPI</key>
 	<dict>
 		<key>Add</key>
@@ -146,16 +146,17 @@
 		<array>
 			<dict>
 				<key>Arch</key>
-				<string>Any</string>
+				<string>x86_64</string>
 				<key>Comment</key>
-				<string>macOS to hacOS</string>
+				<string>Skip Board ID check</string>
 				<key>Count</key>
-				<integer>1</integer>
+				<integer>0</integer>
 				<key>Enabled</key>
 				<false/>
 				<key>Find</key>
 				<data>
-				bWFjT1M=
+				AFAAbABhAHQAZgBvAHIAbQBTAHUAcABwAG8AcgB0AC4A
+				cABsAGkAcwB0
 				</data>
 				<key>Identifier</key>
 				<string>Apple</string>
@@ -166,7 +167,38 @@
 				</data>
 				<key>Replace</key>
 				<data>
-				aGFjT1M=
+				AC4ALgAuAC4ALgAuAC4ALgAuAC4ALgAuAC4ALgAuAC4A
+				LgAuAC4ALgAu
+				</data>
+				<key>ReplaceMask</key>
+				<data>
+				</data>
+				<key>Skip</key>
+				<integer>0</integer>
+			</dict>
+			<dict>
+				<key>Arch</key>
+				<string>x86_64</string>
+				<key>Comment</key>
+				<string>Reroute HW_BID to OC_BID</string>
+				<key>Count</key>
+				<integer>0</integer>
+				<key>Enabled</key>
+				<false/>
+				<key>Find</key>
+				<data>
+				SABXAF8AQgBJAEQA
+				</data>
+				<key>Identifier</key>
+				<string>Apple</string>
+				<key>Limit</key>
+				<integer>0</integer>
+				<key>Mask</key>
+				<data>
+				</data>
+				<key>Replace</key>
+				<data>
+				TwBDAF8AQgBJAEQA
 				</data>
 				<key>ReplaceMask</key>
 				<data>
@@ -1852,7 +1884,7 @@
 				Rg==
 				</data>
 				<key>boot-args</key>
-				<string>keepsyms=1 debug=0x100 -vi2c-force-polling</string>
+				<string>keepsyms=1 debug=0x100 -vi2c-force-polling revpatch=sbvmm</string>
 				<key>csr-active-config</key>
 				<data>
 				hwcAAA==
